--- a/CloudFormation.yaml
+++ b/CloudFormation.yaml
@@ -1,110 +1,78 @@
-# source:https://www.jennapederson.com/blog/provisioning-an-ec2-instance-with-cloudformation-part-1/
 AWSTemplateFormatVersion: 2010-09-09
-Description: Iac for bookstore
-#Source:https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html
+Description: Iac for Dal Vacation Home
 Resources:
+
   LambdaRegister:
     Type: AWS::Lambda::Function
     Properties:
-      FunctionName: RegisterDalvacation
-      Runtime: nodejs20.x
-      Role: arn:aws:iam::082497693506:role/LabRole
-      Handler: index.handler
-      Timeout: 60
+      FunctionName: "LambdaRegister"
+      Runtime: "nodejs20.x"
+      Role: "arn:aws:iam::160536684166:role/LabRole" #replace it with your own LabRole ARN
+      Handler: "index.handler"
+      Timeout: 120
       MemorySize: 512
+      Environment:
+        Variables:
+          UserDalVacationDynamoTableName: !Ref UserDalVacationDynamoTable
+          DalVacationHomeUserPoolId: !Ref UserPool
+          DalVacationHomeAppClientId: !Ref UserPoolClient
       Code:
-         ZipFile: |
-          const { DynamoDBClient } = require("@aws-sdk/client-dynamodb");
-          const {
-                      DynamoDBDocumentClient,
-                      ScanCommand,
-                      PutCommand,
-                      GetCommand,
-                      DeleteCommand,
-                    } = require("@aws-sdk/lib-dynamodb");
-          const crypto = require('crypto');
-          exports.handler = async (event) => {
-            const client = new DynamoDBClient({});
-            const dynamo = DynamoDBDocumentClient.from(client);
-            const user_id=JSON.parse(event.body).user_id;
-            const email=JSON.parse(event.body).email;
-            var password=JSON.parse(event.body).password;
-            const userName=JSON.parse(event.body).userName;
-            let responseBody = "";
-            let statusCode = 0;
-            let tableName="UserDalVacation";
-            var algorithm = 'aes256'; // or any other algorithm supported by OpenSSL
-            var key = 'password';
-            var cipher = crypto.createCipher(algorithm, key);  
-            password = cipher.update(password, 'utf8', 'hex') + cipher.final('hex');
-            const body={
-                      user_id: user_id,
-                      email: email,
-                      password:password,
-                      userName: userName
-            }
-            try {
-            const user=await dynamo.send(
-                    new GetCommand({
-                      TableName: tableName,
-                      Key: {
-                        user_id: user_id,
-                      },
-                    })
-                  );
-                  if(!user.Item){
-                await dynamo.send(
-                    new PutCommand({
-                      TableName:tableName,
-                      Item:body
-                    })
-                  );
-                responseBody = JSON.stringify(body)
-                statusCode = 200;
-                  }
-                  else{
-                    responseBody="user already exist"
-                    statusCode = 403;
-                  }
-            } catch (err) {
-                responseBody = `Unable to put Product: ${err}`;
-                statusCode = 403;
-            }
-            const response = {
-                    statusCode: statusCode,
-                    headers: {
-                        "Content-Type": "application/json"
-                    },
-                    body: responseBody
-                };
-            return response;
-          };
-  #source:https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-dynamodb-table.html
-  #source:https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/quickref-dynamodb.html
-  DalVacation:
+        S3Bucket: "dalvacation-lambda-bucket"
+        S3Key: "LambdaRegister.zip"
+
+  LambdaConfirmUser:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: "LambdaConfirmUser"
+      Runtime: "nodejs20.x"
+      Role: "arn:aws:iam::160536684166:role/LabRole" #replace it with your own LabRole ARN
+      Handler: "index.handler"
+      Timeout: 120
+      MemorySize: 512
+      Environment:
+        Variables:
+          DalVacationHomeUserPoolId: !Ref UserPool
+          DalVacationHomeAppClientId: !Ref UserPoolClient
+      Code:
+        S3Bucket: "dalvacation-lambda-bucket"
+        S3Key: "LambdaConfirmUser.zip"
+  
+  LambdaLogin1stFactor:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: "LambdaLogin1stFactor"
+      Runtime: "nodejs20.x"
+      Role: "arn:aws:iam::160536684166:role/LabRole" #replace it with your own LabRole ARN
+      Handler: "index.handler"
+      Timeout: 120
+      MemorySize: 512
+      Environment:
+        Variables:
+          UserDalVacationDynamoTableName: !Ref UserDalVacationDynamoTable
+          DalVacationHomeAppClientId: !Ref UserPoolClient
+      Code:
+        S3Bucket: "dalvacation-lambda-bucket"
+        S3Key: "LambdaLogin1stFactor.zip"
+
+  UserDalVacationDynamoTable:
     Type: AWS::DynamoDB::Table
     Properties:
      TableName: UserDalVacation
      AttributeDefinitions:
-        - AttributeName: "user_id"
+        - AttributeName: "email"
           AttributeType: "S"
      KeySchema:
-        - AttributeName: "user_id"
+        - AttributeName: "email"
           KeyType: "HASH"
      ProvisionedThroughput:
         ReadCapacityUnits: 5
         WriteCapacityUnits: 5
 
-#source:https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpool.html
-#source:https://mahira-technology.medium.com/aws-cloudformation-template-aws-cognito-user-pool-2356c757ba12
-#source:https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-cognito-userpoolclient.html
-#source:https://youtu.be/zTSGrd3HD0k?si=MDLUsi7F2L3gbyTk
   UserPool:
     Type: AWS::Cognito::UserPool
     Properties:
-      UserPoolName: MyUserPool
+      UserPoolName: DALVacationHomeUserPool
       UsernameAttributes:
-        - phone_number
         - email
       AutoVerifiedAttributes:
         - email
@@ -118,10 +86,146 @@ Resources:
     Type: AWS::Cognito::UserPoolClient
     Properties:
       UserPoolId: !Ref UserPool
-      ClientName: MyUserPoolClient
+      ClientName: DALVacationHomeAppClient
       GenerateSecret: false
       ExplicitAuthFlows:
-        - ALLOW_USER_SRP_AUTH
+        - ALLOW_USER_PASSWORD_AUTH
         - ALLOW_REFRESH_TOKEN_AUTH
       SupportedIdentityProviders:
         - COGNITO
+
+  # API GATEWAY
+  
+  UserAuthenticationApiGateway:
+    Type: AWS::ApiGateway::RestApi
+    Properties:
+      Name: UserAuthenticationApiGateway
+
+  UserAuthenticationApiAuthenticationResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      RestApiId: !Ref UserAuthenticationApiGateway
+      ParentId: !GetAtt UserAuthenticationApiGateway.RootResourceId
+      PathPart: "authentication"
+
+  UserAuthenticationApiSignupResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      RestApiId: !Ref UserAuthenticationApiGateway
+      ParentId: !GetAtt UserAuthenticationApiAuthenticationResource.ResourceId
+      PathPart: "signup"
+
+  UserAuthenticationApiLoginResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      RestApiId: !Ref UserAuthenticationApiGateway
+      ParentId: !GetAtt UserAuthenticationApiAuthenticationResource.ResourceId
+      PathPart: "login"
+
+  UserAuthenticationApiSignupConfirmationResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      RestApiId: !Ref UserAuthenticationApiGateway
+      ParentId: !GetAtt UserAuthenticationApiSignupResource.ResourceId
+      PathPart: "confirmation"
+
+  UserAuthenticationApiLogin1stResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      RestApiId: !Ref UserAuthenticationApiGateway
+      ParentId: !GetAtt UserAuthenticationApiLoginResource.ResourceId
+      PathPart: "1st"
+
+  SignUpMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      RestApiId: !Ref UserAuthenticationApiGateway
+      ResourceId: !Ref UserAuthenticationApiSignupResource
+      HttpMethod: POST
+      AuthorizationType: NONE
+      MethodResponses:
+        - StatusCode: 200
+          ResponseModels:
+            application/json: "Empty"
+      RequestParameters: {}
+      RequestModels: {}
+      Integration:
+        IntegrationHttpMethod: POST
+        Type: AWS
+        Uri: 
+          Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaRegister.Arn}/invocations"
+        Credentials: "arn:aws:iam::160536684166:role/LabRole"
+        RequestTemplates:
+          application/json: ""
+        IntegrationResponses:
+          - StatusCode: "200"
+            ResponseTemplates:
+              application/json: ""
+
+  ConfirmationMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      RestApiId: !Ref UserAuthenticationApiGateway
+      ResourceId: !Ref UserAuthenticationApiSignupConfirmationResource
+      HttpMethod: POST
+      AuthorizationType: NONE
+      MethodResponses:
+        - StatusCode: 200
+          ResponseModels:
+            application/json: "Empty"
+      RequestParameters: {}
+      RequestModels: {}
+      Integration:
+        IntegrationHttpMethod: POST
+        Type: AWS
+        Uri: 
+          Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaConfirmUser.Arn}/invocations"
+        Credentials: "arn:aws:iam::160536684166:role/LabRole"
+        RequestTemplates:
+          application/json: ""
+        IntegrationResponses:
+          - StatusCode: "200"
+            ResponseTemplates:
+              application/json: ""
+
+  FirstLoginMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      RestApiId: !Ref UserAuthenticationApiGateway
+      ResourceId: !Ref UserAuthenticationApiLogin1stResource
+      HttpMethod: POST
+      AuthorizationType: NONE
+      MethodResponses:
+        - StatusCode: 200
+          ResponseModels:
+            application/json: "Empty"
+      RequestParameters: {}
+      RequestModels: {}
+      Integration:
+        IntegrationHttpMethod: POST
+        Type: AWS
+        Uri: 
+          Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaLogin1stFactor.Arn}/invocations"
+        Credentials: "arn:aws:iam::160536684166:role/LabRole"
+        RequestTemplates:
+          application/json: ""
+        IntegrationResponses:
+          - StatusCode: "200"
+            ResponseTemplates:
+              application/json: ""
+
+  UserAuthenticationApiStage:
+    Type: AWS::ApiGateway::Stage
+    Properties:
+      RestApiId: !Ref UserAuthenticationApiGateway
+      DeploymentId: !Ref UserAuthenticationApiDeployment
+      StageName: v1
+
+  UserAuthenticationApiDeployment:
+    Type: AWS::ApiGateway::Deployment
+    DependsOn:
+      - SignUpMethod
+      - ConfirmationMethod
+      - FirstLoginMethod
+    Properties:
+      RestApiId: !Ref UserAuthenticationApiGateway
