--- a/CloudFormation.yaml
+++ b/CloudFormation.yaml
@@ -347,3 +347,244 @@ Resources:
       - ThirdLoginMethod
     Properties:
       RestApiId: !Ref UserAuthenticationApiGateway
+
+  RoomsTable:
+    Type: "AWS::DynamoDB::Table"
+    Properties: 
+      TableName: "Rooms"
+      AttributeDefinitions: 
+        - AttributeName: "room_id"
+          AttributeType: "S"
+      KeySchema: 
+        - AttributeName: "room_id"
+          KeyType: "HASH"
+      ProvisionedThroughput: 
+        ReadCapacityUnits: 5
+        WriteCapacityUnits: 5
+
+  RoomDetailsAPIGateway:
+    Type: 'AWS::ApiGatewayV2::Api'
+    Properties: 
+      Name: 'RoomDetailsAPIGateway'
+      ProtocolType: 'HTTP'
+      CorsConfiguration:
+        AllowHeaders: 
+          - '*'
+        AllowMethods: 
+          - GET
+          - POST
+          - PUT
+          - DELETE
+          - OPTIONS
+        AllowOrigins: 
+          - '*'
+      Tags:
+        Environment: 'dev'
+
+  RoomDetailsAPIDevStage:
+    Type: 'AWS::ApiGatewayV2::Stage'
+    Properties: 
+      ApiId: 
+        Ref: 'RoomDetailsAPIGateway'
+      StageName: 'dev'
+      AutoDeploy: true
+
+  GetAllRoomDetails:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: "GetAllRoomDetails"
+      Runtime: "nodejs20.x"
+      Role: "arn:aws:iam::053346983886:role/LabRole" #replace it with your own LabRole ARN
+      Handler: "index.handler"
+      Timeout: 120
+      MemorySize: 512
+      Code:
+        S3Bucket: "dalvacation-lambda-code" #replace it with your own S3bucket
+        S3Key: "GetAllRoomDetails.zip"
+      Environment:
+        Variables:
+          TABLE_NAME: !Ref RoomsTable
+
+  GetRoomDetailsByRoomId:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: "GetRoomDetailsByRoomId"
+      Runtime: "nodejs20.x"
+      Role: "arn:aws:iam::053346983886:role/LabRole" #replace it with your own LabRole ARN
+      Handler: "index.handler"
+      Timeout: 120
+      MemorySize: 512
+      Code:
+        S3Bucket: "dalvacation-lambda-code" #replace it with your own S3bucket
+        S3Key: "GetRoomDetailsByRoomId.zip"
+      Environment:
+        Variables:
+          TABLE_NAME: !Ref RoomsTable
+
+  AddRoomDetails:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: "AddRoomDetails"
+      Runtime: "nodejs20.x"
+      Role: "arn:aws:iam::053346983886:role/LabRole" #replace it with your own LabRole ARN
+      Handler: "index.handler"
+      Timeout: 120
+      MemorySize: 512
+      Code:
+        S3Bucket: "dalvacation-lambda-code" #replace it with your own S3bucket
+        S3Key: "AddRoomDetails.zip"
+      Environment:
+        Variables:
+          TABLE_NAME: !Ref RoomsTable
+
+  UpdateRoomDetails:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: "UpdateRoomDetails"
+      Runtime: "nodejs20.x"
+      Role: "arn:aws:iam::053346983886:role/LabRole" #replace it with your own LabRole ARN
+      Handler: "index.handler"
+      Timeout: 120
+      MemorySize: 512
+      Code:
+        S3Bucket: "dalvacation-lambda-code" #replace it with your own S3bucket
+        S3Key: "UpdateRoomDetails.zip"
+      Environment:
+        Variables:
+          TABLE_NAME: !Ref RoomsTable
+
+  DeleteRoomDetails:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: "DeleteRoomDetails"
+      Runtime: "nodejs20.x"
+      Role: "arn:aws:iam::053346983886:role/LabRole" #replace it with your own LabRole ARN
+      Handler: "index.handler"
+      Timeout: 120
+      MemorySize: 512
+      Code:
+        S3Bucket: "dalvacation-lambda-code" #replace it with your own S3bucket
+        S3Key: "DeleteRoomDetails.zip"
+      Environment:
+        Variables:
+          TABLE_NAME: !Ref RoomsTable
+
+  GetAllRoomDetailsAPIIntegration:
+    Type: 'AWS::ApiGatewayV2::Integration'
+    Properties:
+      ApiId: !Ref RoomDetailsAPIGateway
+      IntegrationType: 'AWS_PROXY'
+      IntegrationUri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetAllRoomDetails.Arn}/invocations'
+      PayloadFormatVersion: '2.0'
+
+  GetAllRoomDetailsAPIRoute:
+    Type: 'AWS::ApiGatewayV2::Route'
+    Properties:
+      ApiId: !Ref RoomDetailsAPIGateway
+      RouteKey: 'GET /GetAllRoomDetails'
+      Target: !Sub 'integrations/${GetAllRoomDetailsAPIIntegration}'
+
+  GetAllRoomDetailAPIStageInvokePermission:
+    Type: 'AWS::Lambda::Permission'
+    Properties:
+      FunctionName: !Ref GetAllRoomDetails
+      Action: 'lambda:InvokeFunction'
+      Principal: 'apigateway.amazonaws.com'
+      SourceArn: !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RoomDetailsAPIGateway}/dev/GET/GetAllRoomDetails'
+
+  GetRoomDetailsByRoomIdAPIIntegration:
+    Type: 'AWS::ApiGatewayV2::Integration'
+    Properties:
+      ApiId: !Ref RoomDetailsAPIGateway
+      IntegrationType: 'AWS_PROXY'
+      IntegrationUri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetRoomDetailsByRoomId.Arn}/invocations'
+      PayloadFormatVersion: '2.0'
+
+  GetRoomDetailsByRoomIdAPIRoute:
+    Type: 'AWS::ApiGatewayV2::Route'
+    Properties:
+      ApiId: !Ref RoomDetailsAPIGateway
+      RouteKey: 'GET /GetRoomDetailsByRoomId'
+      Target: !Sub 'integrations/${GetRoomDetailsByRoomIdAPIIntegration}'
+
+  GetRoomDetailsByRoomIdAPIStageInvokePermission:
+    Type: 'AWS::Lambda::Permission'
+    Properties:
+      FunctionName: !Ref GetRoomDetailsByRoomId
+      Action: 'lambda:InvokeFunction'
+      Principal: 'apigateway.amazonaws.com'
+      SourceArn: !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RoomDetailsAPIGateway}/dev/GET/GetRoomDetailsByRoomId'
+
+  AddRoomDetailsAPIIntegration:
+    Type: 'AWS::ApiGatewayV2::Integration'
+    Properties:
+      ApiId: !Ref RoomDetailsAPIGateway
+      IntegrationType: 'AWS_PROXY'
+      IntegrationUri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${AddRoomDetails.Arn}/invocations'
+      PayloadFormatVersion: '2.0'
+
+  AddRoomDetailsAPIRoute:
+    Type: 'AWS::ApiGatewayV2::Route'
+    Properties:
+      ApiId: !Ref RoomDetailsAPIGateway
+      RouteKey: 'POST /AddRoomDetails'
+      Target: !Sub 'integrations/${AddRoomDetailsAPIIntegration}'
+
+  AddRoomDetailsAPIStageInvokePermission:
+    Type: 'AWS::Lambda::Permission'
+    Properties:
+      FunctionName: !Ref AddRoomDetails
+      Action: 'lambda:InvokeFunction'
+      Principal: 'apigateway.amazonaws.com'
+      SourceArn: !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RoomDetailsAPIGateway}/dev/POST/AddRoomDetails'
+
+  UpdateRoomDetailsAPIIntegration:
+    Type: 'AWS::ApiGatewayV2::Integration'
+    Properties:
+      ApiId: !Ref RoomDetailsAPIGateway
+      IntegrationType: 'AWS_PROXY'
+      IntegrationUri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${UpdateRoomDetails.Arn}/invocations'
+      PayloadFormatVersion: '2.0'
+
+  UpdateRoomDetailsAPIRoute:
+    Type: 'AWS::ApiGatewayV2::Route'
+    Properties:
+      ApiId: !Ref RoomDetailsAPIGateway
+      RouteKey: 'PUT /UpdateRoomDetails'
+      Target: !Sub 'integrations/${UpdateRoomDetailsAPIIntegration}'
+
+  UpdateRoomDetailsAPIStageInvokePermission:
+    Type: 'AWS::Lambda::Permission'
+    Properties:
+      FunctionName: !Ref UpdateRoomDetails
+      Action: 'lambda:InvokeFunction'
+      Principal: 'apigateway.amazonaws.com'
+      SourceArn: !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RoomDetailsAPIGateway}/dev/PUT/UpdateRoomDetails'
+
+  DeleteRoomDetailsAPIIntegration:
+    Type: 'AWS::ApiGatewayV2::Integration'
+    Properties:
+      ApiId: !Ref RoomDetailsAPIGateway
+      IntegrationType: 'AWS_PROXY'
+      IntegrationUri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${DeleteRoomDetails.Arn}/invocations'
+      PayloadFormatVersion: '2.0'
+
+  DeleteRoomDetailsAPIRoute:
+    Type: 'AWS::ApiGatewayV2::Route'
+    Properties:
+      ApiId: !Ref RoomDetailsAPIGateway
+      RouteKey: 'DELETE /DeleteRoomDetails'
+      Target: !Sub 'integrations/${DeleteRoomDetailsAPIIntegration}'
+
+  DeleteRoomDetailsAPIStageInvokePermission:
+    Type: 'AWS::Lambda::Permission'
+    Properties:
+      FunctionName: !Ref DeleteRoomDetails
+      Action: 'lambda:InvokeFunction'
+      Principal: 'apigateway.amazonaws.com'
+      SourceArn: !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RoomDetailsAPIGateway}/dev/DELETE/DeleteRoomDetails'
+
+Outputs:
+  ApiGatewayUrl:
+    Value: !Sub 'https://${RoomDetailsAPIGateway}.execute-api.${AWS::Region}.amazonaws.com/dev'
+    Description: 'URL for the API Gateway Stage'
