--- a/CloudFormation.yaml
+++ b/CloudFormation.yaml
@@ -283,8 +283,24 @@ Resources:
         S3Bucket: "dalvacation-lambda-bucket-yuci" #replace it with your own S3bucket
         S3Key: "UserCount.zip"
   
+  LambdaGetIncomeByAgent:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: "LambdaGetIncomeByAgent"
+      Runtime: "nodejs20.x"
+      Role: "arn:aws:iam::082497693506:role/LabRole" #replace it with your own LabRole ARN
+      Handler: "index.handler"
+      Timeout: 120
+      MemorySize: 512
+      Environment:
+        Variables:
+          RoomsDynamoTableName: !Ref RoomsTable
+      Code:
+        S3Bucket: "dalvacation-lambda-bucket-yuci" #replace it with your own S3bucket
+        S3Key: "GetIncomeByAgent.zip"
+  
   # Lambda - Virtual Assistant
-  LambdaRegister:
+  LambdaVirtualAssistant:
     Type: AWS::Lambda::Function
     Properties:
       FunctionName: "LambdaVirtualAssistant"
@@ -318,7 +334,7 @@ Resources:
     Properties:
       FunctionName: "LambdaSNSNotification"
       Runtime: "nodejs20.x"
-      Role: "arn:aws:iam::160536684166:role/LabRole"  # Replace with your own LabRole ARN
+      Role: "arn:aws:iam::082497693506:role/LabRole"  # Replace with your own LabRole ARN
       Handler: "index.handler"
       Timeout: 120
       MemorySize: 512
@@ -326,7 +342,7 @@ Resources:
         Variables:
           DalVacationHomeSnsTopicArn: !Ref DalVacationHomeSnsTopic
       Code:
-        S3Bucket: "dalvacation-lambda-bucket"
+        S3Bucket: "dalvacation-lambda-bucket-yuci"
         S3Key: "LambdaSNSNotification.zip"
 
   DalVacationHomeSnsTopic:
@@ -390,7 +406,7 @@ Resources:
         ReadCapacityUnits: 5
         WriteCapacityUnits: 5
         
-  CustomerBookingsTable:
+  NavigateWebsiteTable:
     Type: "AWS::DynamoDB::Table"
     Properties:
       TableName: "navigate_website"
@@ -451,6 +467,12 @@ Resources:
       RestApiId: !Ref DalVacationHomeApiGateway
       ParentId: !GetAtt UserStatsApiResource.ResourceId
       PathPart: "userCount"
+  GetIncomeByAgentApiResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      RestApiId: !Ref DalVacationHomeApiGateway
+      ParentId: !GetAtt UserStatsApiResource.ResourceId
+      PathPart: "getIncomeByAgent"
   
   # Feedback API
   FeedbackApiResource:
@@ -1109,6 +1131,36 @@ Resources:
               application/json: ""
             ResponseParameters:
               method.response.header.Access-Control-Allow-Origin: "'*'" # replace it with you own domain
+  
+  GetIncomeByAgentMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      RestApiId: !Ref DalVacationHomeApiGateway
+      ResourceId: !Ref GetIncomeByAgentApiResource
+      HttpMethod: POST
+      AuthorizationType: NONE
+      MethodResponses:
+        - StatusCode: 200
+          ResponseModels:
+            application/json: "Empty"
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Origin: "'*'" # replace it with you own domain
+      RequestParameters: {}
+      RequestModels: {}
+      Integration:
+        IntegrationHttpMethod: POST
+        Type: AWS
+        Uri:
+          Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaGetIncomeByAgent.Arn}/invocations"
+        Credentials: "arn:aws:iam::082497693506:role/LabRole"
+        RequestTemplates:
+          application/json: ""
+        IntegrationResponses:
+          - StatusCode: "200"
+            ResponseTemplates:
+              application/json: ""
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'" # replace it with you own domain
 
   DalVacationHomeApiStage:
     Type: AWS::ApiGateway::Stage
@@ -1137,5 +1189,6 @@ Resources:
       - AddCustomerBookingMethod
       - UserCountMethod
       - VirtualAssistantMethod
+      - GetIncomeByAgentMethod
     Properties:
       RestApiId: !Ref DalVacationHomeApiGateway
