--- a/frontend/cloudbuild copy.yaml
+++ b/frontend/cloudbuild copy.yaml
@@ -1,23 +1,23 @@
 steps:
   # Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/dalvacationhome-7373/react-app', '.']
+    args: [ 'build', '-t', 'gcr.io/dalvacationhome-429720/react-app', '.' ]
 
   # Push the Docker image to Google Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/dalvacationhome-7373/react-app']
+    args: [ 'push', 'gcr.io/dalvacationhome-429720/react-app' ]
 
   # Deploy to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
       - 'deploy'
-      - 'react-app'
-      - '--image=gcr.io/dalvacationhome-7373/react-app'
+      - 'sdp-7-dalvacationhome'
+      - '--image=gcr.io/dalvacationhome-429720/react-app'
       - '--platform=managed'
       - '--region=us-central1'
       - '--allow-unauthenticated'
       - '--port=5000'  # Ensure Cloud Run uses the correct port
   
-images:
-  - 'gcr.io/dalvacationhome-7373/react-app'
+  images:
+  - 'gcr.io/dalvacationhome-429720/react-app'
