now user count only return customer number

--- a/CloudFormation.yaml
+++ b/CloudFormation.yaml
@@ -303,7 +303,7 @@ Resources:
   HotelRoomImagesBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: "hotel-room-images"
+      BucketName: "hotel-room-images-yuci"
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
         BlockPublicPolicy: false
@@ -322,7 +322,7 @@ Resources:
               - s3:GetObject
               - s3:PutObject
             Effect: Allow
-            Resource: !Sub arn:aws:s3:::hotel-room-images/*
+            Resource: !Sub arn:aws:s3:::hotel-room-images-yuci/*
             Principal: "*"
 
   CustomerConcernSubscriber:
