--- a/CloudFormation.yaml
+++ b/CloudFormation.yaml
@@ -286,6 +286,21 @@ Resources:
       Code:
         S3Bucket: "dalvacationhome-backend" #replace it with your own S3bucket
         S3Key: "UserCount.zip"
+  LambdaGetIncomeByAgent:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: "LambdaGetIncomeByAgent"
+      Runtime: "nodejs20.x"
+      Role: "arn:aws:iam::082497693506:role/LabRole" #replace it with your own LabRole ARN
+      Handler: "index.handler"
+      Timeout: 120
+      MemorySize: 512
+      Environment:
+        Variables:
+          RoomsDynamoTableName: !Ref RoomsTable
+      Code:
+        S3Bucket: "dalvacation-lambda-bucket-yuci" #replace it with your own S3bucket
+        S3Key: "GetIncomeByAgent.zip"
 
   # Lambda - Virtual Assistant
   LambdaVirtualAssistant:
@@ -569,6 +584,12 @@ Resources:
       RestApiId: !Ref DalVacationHomeApiGateway
       ParentId: !GetAtt UserStatsApiResource.ResourceId
       PathPart: "userCount"
+  GetIncomeByAgentApiResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      RestApiId: !Ref DalVacationHomeApiGateway
+      ParentId: !GetAtt UserStatsApiResource.ResourceId
+      PathPart: "getIncomeByAgent"
 
   # Feedback API
   FeedbackApiResource:
@@ -1346,6 +1367,35 @@ Resources:
               application/json: ""
             ResponseParameters:
               method.response.header.Access-Control-Allow-Origin: "'*'" # replace it with you own domain
+  GetIncomeByAgentMethod:
+    Type: AWS::ApiGateway::Method
+    Properties:
+      RestApiId: !Ref DalVacationHomeApiGateway
+      ResourceId: !Ref GetIncomeByAgentApiResource
+      HttpMethod: POST
+      AuthorizationType: NONE
+      MethodResponses:
+        - StatusCode: 200
+          ResponseModels:
+            application/json: "Empty"
+          ResponseParameters:
+            method.response.header.Access-Control-Allow-Origin: "'*'" # replace it with you own domain
+      RequestParameters: {}
+      RequestModels: {}
+      Integration:
+        IntegrationHttpMethod: POST
+        Type: AWS
+        Uri:
+          Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaGetIncomeByAgent.Arn}/invocations"
+        Credentials: "arn:aws:iam::082497693506:role/LabRole"
+        RequestTemplates:
+          application/json: ""
+        IntegrationResponses:
+          - StatusCode: "200"
+            ResponseTemplates:
+              application/json: ""
+            ResponseParameters:
+              method.response.header.Access-Control-Allow-Origin: "'*'" # replace it with you own domain
 
   DalVacationHomeApiStage:
     Type: AWS::ApiGateway::Stage
@@ -1377,5 +1427,6 @@ Resources:
       - GetAllConcernsMethod
       - GetConcernChatMethod
       - VirtualAssistantMethod
+      - GetIncomeByAgentMethod
     Properties:
       RestApiId: !Ref DalVacationHomeApiGateway
